--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@hono/node-server": "^1.13.8",
     "ai": "^4.1.38",
     "dotenv": "^16.4.5",
-    "hono": "^4.7.1"
+    "hono": "^4.7.1",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/node": "^22.13.4",
